# ai-tutor

./: .gitignore  README.md  prompt.txt
.claude/: settings.local.json
.github/workflows/: android-ci.yml  android-release.yml  backend-ci.yml  backend-deploy.yml
android/: README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
backend/: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: base.py  langgraph_graph.py  mock_graph.py  state.py  validator.py
backend/app/api/: deps.py  errors.py
backend/app/api/v1/: assets.py  health.py  lessons.py  router.py
backend/app/core/: audio.py  config.py  errors.py  ids.py  logging.py
backend/app/domain/: generation.py  mappers.py  models.py  schemas.py
backend/app/providers/: base.py  factory.py  gemini.py  mock.py  prompts.py
backend/app/repositories/: base.py  filesystem.py  memory.py
backend/app/services/: generation.py  jobs.py  lesson_builder.py
backend/app/tools/: list_models.py
backend/tests/: conftest.py  helpers.py  test_audio.py  test_factory.py  test_filesystem_repo.py  test_gemini_provider.py  test_generation.py  test_health.py  test_langgraph.py  test_lessons_api.py  test_validator.py
docs/: 01-vision-and-requirements.md  02-architecture.md  03-domain-model.md  04-ai-agent-design.md  05-sequence-diagrams.md  06-api-contract.md  07-android-architecture.md  08-roadmap-and-sdlc.md  09-cicd.md
(+48 files in other folders)
